--- a/ner_label.ipynb
+++ b/ner_label.ipynb
@@ -142,7 +142,7 @@
         "for num,i in enumerate(label_content.split(' ')):\n",
         "    if(i not in label_list):\n",
         "      for word in i:\n",
-        "        list1.append('o')\n",
+        "        list1.append('O')\n",
         "    else:\n",
         "      list1.append(i)      \n",
         "\n",
